# internal/service/validator/auth.go
@@ -21,3 +21,8 @@ type ModifyCodeRequest struct {
 	AuthCode string `form:"auth_code" binding:"required,min=4,max=20"`
 	NewCode  string `form:"new_code" binding:"required,min=4,max=20"`
 }
+
+type ResetCodeRequest struct {
+	Email     string `form:"email" binding:"required,min=1,max=50"`
+	CheckCode string `form:"check_code" binding:"required,min=6,max=6"`
+}
